# SDLCards

./: CMakeLists.txt  CMakeSettings.json  README.md  app.cpp  app.hpp  cacheta.cpp  cacheta.hpp  card.cpp  card.hpp  exception.cpp  exception.hpp  main.cpp  paciencia.cpp  paciencia.hpp  render.cpp  render.hpp  thread.cpp  thread.hpp
